--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -11,6 +11,7 @@
     // background-color: #FFD700;
     color: black;
     position: fixed;
+    z-index: 1;
     width: 100vw;
     top: 0;
     left: 0;
