--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -8,8 +8,7 @@
 }
 
 .navbar{
-    // background-color: #FFD700;
-    color: black;
+    color: white;
     position: fixed;
     z-index: 1;
     width: 100vw;
@@ -19,7 +18,51 @@
     transition: background 0.5s linear;
 
     &.scrolled{
-        background : rgb(18, 160, 199);
+        background : rgba(18, 160, 199, 0.906);
+    }
+
+    .right{
+        margin-left: auto;
+        margin-right: 40px;
+        display: flex;
+        align-items: center;
+        position: relative;
+    
+        .icon{
+            margin: 0px 15px;
+            cursor: pointer;
+        }
+    
+        .profile{
+            display: flex;
+            align-items: center;
+            .options{
+                top: 43px;
+                left: 170px;
+                position: absolute;
+                visibility: hidden;
+                opacity: 0;
+                color: black;
+                background-color: rgb(18, 160, 199);
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                transition: visibility 1s linear,opacity 300ms;
+                span{
+                    cursor: pointer;
+                    padding: 10px;
+                }
+            }
+            
+        }
+
+        .profile:hover{ 
+            .options{
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    
     }
 
 }
@@ -45,50 +88,3 @@
     margin-right: 20px;
     cursor: pointer;
 }
-
-.right{
-    margin-left: auto;
-    margin-right: 60px;
-    display: flex;
-    align-items: center;
-
-    .icon{
-        margin: 0px 15px;
-        cursor: pointer;
-    }
-
-    .profile{
-        .options{
-            visibility: hidden;
-            opacity: 0;
-            transition: visibility 1s linear,opacity 300ms;
-            span{
-                cursor: pointer;
-                padding: 10px;
-            }
-        }
-    
-        &:hover{ 
-            .options{
-                opacity: 1;
-                visibility: visible;
-                height: fit-content;
-                width: fit-content;
-                left: auto;
-                top: 40px;
-                right: 20px;
-                display: flex;
-                background-color: rgb(18, 160, 199);
-                flex-direction: column;
-                position: absolute;
-                color: black;
-                border-radius: 5px;
-            }
-        }
-        
-    }
-
-}
-
-
-
