--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -16,10 +16,14 @@
             align-items: center;
             justify-content: space-between;
         }
-        .logo{
+        .logoText{
             height: 40px;
+            font-weight: bold;
+            color: #FFD700;
+            font-size: 35px;
+            // margin-left: 5px;
+            margin: auto;
         }
-        
     }
     .container {
         width: 100%;
