--- a/src/Components/List/List.scss
+++ b/src/Components/List/List.scss
@@ -1,7 +1,7 @@
 .featuredlist{
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    // display: flex;
+    // flex-direction: column;
+    // overflow: hidden;
     width: 100%;
     margin-top: 10px;
 
@@ -12,18 +12,21 @@
         margin-left: 50px;
     }
     .wrapper{
-        margin-top: 10px;
-        display: flex;
+        // margin-top: 10px;
+        // display: flex;
         position: relative;
         .sliderArrow{
             cursor: pointer;
             position: absolute;
             width: 50px;
-            height: 200px;
+            height: 100%;
             background-color: rgba(80, 55, 55, 0.53);
+            color: white;
+            z-index: 99;
             top: 0;
             bottom: 0;
             margin: auto;
+            
             &.left{
                 left: 0;
             }
@@ -33,10 +36,13 @@
             }
         }
 
-        .container{
-            margin-left: 70px;
+        .container {
+            margin-left: 50px;
             display: flex;
+            margin-top: 10px;
             width: max-content;
-        }
+            transform: translateX(0px);
+            transition: all 1s ease;
+          }
     }
 }
