Fixed featured & login page

--- a/src/Components/featured/featured.scss
+++ b/src/Components/featured/featured.scss
@@ -1,56 +1,82 @@
 .featured{
-    height: 650px;
-    display: flex;
-    background: linear-gradient(to bottom,transparent 0%,rgba(3, 30, 46, 0.3) 70% );
-
-    .poster{
-        background-image: url("../../images/lotrbackground.jpg");
-        min-height: 500px; 
-        width: 100%;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    .movie{
-        top: 150px;
-        left: 80px;
+    height: 90vh;
+    // display: flex;
+    // background: linear-gradient(to bottom,transparent 0%,rgba(3, 30, 46, 0.3) 70% );
+    position: relative;
+    
+    .category{
         position: absolute;
-        .logo{
-            position: absolute;
-            height: 300px;
-            width: 300px;
-        }
-        .movieInfo{
-            top: 310px;
-            position: absolute;
-            width: 500px;
-            color: whitesmoke;
-        }
-    }
-}
-
-.buttons{
-    display: flex;
-    top: 400px;
-    position: absolute;
-
-    > div{
-        cursor: pointer;
-        padding: 10px 20px 10px 20px;
-        align-items: center;
-        margin-right: 50px;
-        width: max-content;
-        height: 30px;
-        display: flex;
+        top: 80px;
+        left: 50px;
+        font-size: 30px;
+        font-weight: 500;
         color: white;
-        background-color: black;
-        border-radius: 5px;
-        .text{
-            padding-left: 5px;
-            padding-right: 5px;
+        display: flex;
+        align-items: center;
+    
+        select {
+          cursor: pointer;
+          background-color: var(--main-color);
+          border: 1px solid white;
+          color: white;
+          margin-left: 20px;
+          padding: 5px;
         }
     }
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .info{
+        width: 35%;
+        position:absolute;
+        left: 50px;
+        bottom: 100px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+
+        img{
+            width: 400px;
+        }
+        .desc{
+            margin: 20px 0px;
+        }
+        .buttons{
+            display: flex;
+            
+            button {
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 18px;
+                font-weight: 500;
+                margin-right: 10px;
+                cursor: pointer;
+        
+                &.play {
+                  background-color: white;
+                  color: var(--main-color);
+                }
+        
+                &.more {
+                  background-color: gray;
+                  color: white;
+                }
+        
+                span {
+                  margin-left: 5px;
+                }
+              }
+
+        }
+    }
+
 }
+
 
