--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -24,9 +24,10 @@
             // margin-left: 600px;
             margin:auto
         }
-        // .logo{
-        //     height: 40px;
-        // }
+        .logo{
+            height: 70px;   
+            width: 60px;
+        }
         .loginButton {
             background-color: purple;
             border: none;
